syntax = "proto3";

package onight.zjfae.afront.gens;

//Generated By BrewRobot:Thu Nov 23 16:28:46 CST 2017

message PBIFE_bankcardmanage_deleteBankCardPrere{
	///ife/bankcardmanage/deleteBankCardPrere.html


}

message Ret_PBIFE_bankcardmanage_deleteBankCardPrere{
	///ife/bankcardmanage/deleteBankCardPrere.html

	string returnCode=1;	//报文头

	string returnMsg=2;	//报文头

	PBIFE_bankcardmanage_deleteBankCardPrere data=3;


}

message REQ_PBIFE_bankcardmanage_deleteBankCardPrere{
	///ife/bankcardmanage/deleteBankCardPrere.html

	string isVerifyAmount = 1; //,是否校验金额（界定新老版本）：0|空=否；1=是；,String,不校验,否,


}